src/test/ui/resolve/issue-21221-2.stderr
error[E0405]: cannot find trait `T` in this scope
  --> $DIR/issue-21221-2.rs:18:6
   |
LL | impl T for Foo { }
   |      ^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
LL | use foo::bar::T;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0405`.
